@@ -67,7 +67,7 @@ class HTMLTranslator(BaseTranslator):
         self.body.append(self.starttag(node, 'dt'))
         # anchor for per-desc interactive data
         if node.parent['desctype'] != 'describe' and node['ids'] and node['first']:
-            self.body.append('<!--#%s#-->' % node['ids'][0])
+            self.body.append('<!--[%s]-->' % node['ids'][0])
         if node.parent['desctype'] in ('class', 'exception'):
             self.body.append('%s ' % node.parent['desctype'])
     def depart_desc_signature(self, node):
