@@ -31,11 +31,11 @@ div.body {
     padding: 0 20px 30px 20px;
 }
 
-div.sidebarwrapper {
+div.sphinxsidebarwrapper {
     padding: 10px 5px 0 10px;
 }
 
-div.sidebar {
+div.sphinxsidebar {
     float: left;
     width: 230px;
     margin-left: -100%;
@@ -92,7 +92,7 @@ div.related a {
 }
 
 /* ::: TOC :::: */
-div.sidebar h3 {
+div.sphinxsidebar h3 {
     font-family: 'Trebuchet MS', sans-serif;
     color: white;
     font-size: 1.4em;
@@ -101,7 +101,7 @@ div.sidebar h3 {
     padding: 0;
 }
 
-div.sidebar h4 {
+div.sphinxsidebar h4 {
     font-family: 'Trebuchet MS', sans-serif;
     color: white;
     font-size: 1.3em;
@@ -110,41 +110,41 @@ div.sidebar h4 {
     padding: 0;
 }
 
-div.sidebar p {
+div.sphinxsidebar p {
     color: white;
 }
 
-div.sidebar p.topless {
+div.sphinxsidebar p.topless {
     margin: 5px 10px 10px 10px;
 }
 
-div.sidebar ul {
+div.sphinxsidebar ul {
     margin: 10px;
     padding: 0;
     list-style: none;
     color: white;
 }
 
-div.sidebar ul ul,
-div.sidebar ul.want-points {
+div.sphinxsidebar ul ul,
+div.sphinxsidebar ul.want-points {
     margin-left: 20px;
     list-style: square;
 }
 
-div.sidebar ul ul {
+div.sphinxsidebar ul ul {
     margin-top: 0;
     margin-bottom: 0;
 }
 
-div.sidebar a {
+div.sphinxsidebar a {
     color: #98dbcc;
 }
 
-div.sidebar form {
+div.sphinxsidebar form {
     margin-top: 10px;
 }
 
-div.sidebar input {
+div.sphinxsidebar input {
     border: 1px solid #98dbcc;
     font-family: sans-serif;
     font-size: 1em;
@@ -425,7 +425,7 @@ div#suggest-changes-box textarea {
 
 
 /* :::: PREVIEW :::: */
-div.preview { 
+div.preview {
     background-image: url(style/preview.png);
     padding: 0 20px 20px 20px;
     margin-bottom: 30px;
@@ -795,14 +795,14 @@ form.comment textarea {
 
 /* :::: PRINT :::: */
 @media print {
-    div.document, 
-    div.documentwrapper, 
+    div.document,
+    div.documentwrapper,
     div.bodywrapper {
         margin: 0;
         width : 100%;
     }
 
-    div.sidebar,
+    div.sphinxsidebar,
     div.related,
     div.footer,
     div#comments div.new-comment-box,
