@@ -3,7 +3,7 @@
  */
 
 
-div.sidebar {
+div.sphinxsidebar {
     float: right;
 }
 
